--- a/Hasici.Web.csproj
+++ b/Hasici.Web.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="Views\Shared\skusim.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="ckeditor-full" Version="4.10.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
