--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=Hasici.Web;User Id=hasic;Password=123;;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=tcp:hasiciweb.database.windows.net,1433;Initial Catalog=Hasici.Web;User ID=dhzsuchahora;Password=Vt3p1sA5"
   },
   "Logging": {
     "LogLevel": {
@@ -8,3 +8,6 @@
     }
   }
 }
+
+
+
