--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=Hasici.Web;User Id=hasic;Password=123;;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=.;Database=Hasici.Web;User Id=.;Integrated Security = True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
